--- a/drafts/01-10-2019-better-React-Rest-Props-Typing/index.mdx
+++ b/drafts/01-10-2019-better-React-Rest-Props-Typing/index.mdx
@@ -6,6 +6,7 @@ tags: [react, typescript, blog, about]
 featuredImage: './featured-image.jpg'
 headerImage: './header.jpg'
 excerpt: 'You may know the {...rest} or {...other} props pattern to spread all not directly used props to the wrapped HTML element'
+main: true
 ---
 
 If you are creating reusable components or for example a design system in react you sometimes want to pass down more **props** then you usually have defined in your type definitions.
