fix: add correct video link

--- a/src/pages/posts/02-12-2020-datastructures-stack/index.mdx
+++ b/src/pages/posts/02-12-2020-datastructures-stack/index.mdx
@@ -31,16 +31,9 @@ In JavaScript, stacks can be used to implement do and undo functionality.
 
 The JavaScript language itself uses a call stack to figure out which function to call next. There is an awesome talk about how this works by Phillip Roberts and you can find a detailed explanation on [MDN](https://developer.mozilla.org/en-US/docs/Glossary/Call_stack)
 
-<iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed?v=8aGhZQkoFbQ"
-  frameborder="0"
-  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-></iframe>
-
-You can implement a stack using an array. The following example shows an implementation using functions with a function constructor.
+<iframe frame frameborder="0" width="560" height="315" src="https://www.youtube.com/embed/8aGhZQkoFbQ"></iframe>
+You can implement a stack using an array. The following example shows an implementation using functions with a function
+constructor.
 
 ```jsx
 /**
