feat: update storybook and gatsby packages add blog page

--- a/content/blog/01-10-2019-better-React-Rest-Props-Typing/index.mdx
+++ b/content/blog/01-10-2019-better-React-Rest-Props-Typing/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/optimize-react-typings'
+path: 'optimize-react-typings'
+id: 'optimize-react-typings'
 date: '2019-10-03T17:12:33.962Z'
 title: 'How to optimize your react {...other} props type definitions'
 tags: [react, typescript, blog, about]
