--- a/content/blog/02-12-2020-datastructures-stack/index.mdx
+++ b/content/blog/02-12-2020-datastructures-stack/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/datastructures-in-js-stacks'
+path: 'datastructures-in-js-stacks'
+id: 'datastructures-in-js-stacks'
 date: '2020-12-10'
 title: 'Datastructures in JS Part 1: Stacks'
 tags: [Data Structures, JS]
