--- a/content/blog/12-12-2019-nordic-js/index.mdx
+++ b/content/blog/12-12-2019-nordic-js/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/nordicjs2019'
+path: 'nordicjs2019'
+id: 'nordicjs2019'
 date: '2019-12-12T17:12:33.962Z'
 title: 'My experiences @ Nordic JS 🇸🇪 ❄️'
 tags: [fun, blog, JS, JavaScript, conference]
