--- a/content/blog/17-02-2019-webpagetest-github-action/index.mdx
+++ b/content/blog/17-02-2019-webpagetest-github-action/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/webpagetest-github-action'
+path: 'webpagetest-github-action'
+id: 'webpagetest-github-action'
 date: '2019-03-14T17:12:33.962Z'
 title: 'Print WebPageTest.org results as an GitHub Action 🎬'
 featuredImage: './featured-image.jpg'
