--- a/content/blog/23-09-2019-practical-type-coercion/index.mdx
+++ b/content/blog/23-09-2019-practical-type-coercion/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/pratical-type-coercion'
+path: 'pratical-type-coercion'
+id: 'pratical-type-coercion'
 date: '2019-09-24T17:12:33.962Z'
 title: 'Practical type coercion / conversion and type checks in JavaScript'
 featuredImage: './header.jpg'
