--- a/content/blog/24-04-2020-debug-service-worker/index.mdx
+++ b/content/blog/24-04-2020-debug-service-worker/index.mdx
@@ -1,5 +1,6 @@
 ---
-path: '/debug-service-worker-locally'
+path: 'debug-service-worker-locally'
+id: 'debug-service-worker-locally'
 date: '2020-04-25T13:12:33.962Z'
 title: 'How to test a service worker locally using self signed certificates'
 featuredImage: './featured-image.jpg'
