--- a/content/blog/10-02-2019-hello-world/index.mdx
+++ b/content/blog/10-02-2019-hello-world/index.mdx
@@ -1,5 +1,6 @@
 ---
 path: '/introduction'
+id: '/introduction'
 date: '2019-02-10T17:12:33.962Z'
 title: 'Hi Everyone! 👋✌️🙋'
 tags: [introduction, fun, blog, about]
