refactor: use css variables

--- a/content/blog/14-02-2021-modern-data-fetching/index.mdx
+++ b/content/blog/14-02-2021-modern-data-fetching/index.mdx
@@ -3,11 +3,13 @@ path: 'modern-fetching-react-swr'
 id: 'modern-fetching-react-swr'
 date: '2021-02-14T20:42:33.962Z'
 title: 'Modern way of fetching data in React applications using SWR part 1'
-tags: [fun, blog, JS, JavaScript, React, fetching]
+tags: [fun, blog, JS, JavaScript, React, fetching, TypeScript]
 featuredImage: './featured-image.jpg'
 headerImage: './header.jpg'
 excerpt: 'Experience from visiting Nordic JS 2019'
 ---
+
+import SWRDiagram from './swr.inline.svg';
 
 ## TLDR;
 
@@ -15,9 +17,9 @@ excerpt: 'Experience from visiting Nordic JS 2019'
 - Easy integration with custom fetcher and the fetch API
 - Advanced features as pagination are built in
 
-If you want to fetch data in a modern React application there several awesome modern solutions. They help you to get focused on business logic and avoiding to manage complex server state by yourself.
+If you want to fetch data in a modern React application several awesome modern open source solutions exist. They help you to get focused on business logic and avoiding to manage complex server state by yourself.
 
-In this article, I want to show how to use [SWR](https://swr.vercel.app/) to fetch data from the [Star-Wars](https://swapi.dev/) API and dive into some key 🔑 concepts and how to use SWR with TypeScript. In part 2 we gonna deep dive into some advanced features like pagination this will be the final outcome.
+In this article, I want to show how to use [SWR](https://swr.vercel.app/) to fetch data from the [Star-Wars](https://swapi.dev/) API and dive into some key 🔑 concepts and how to use SWR with TypeScript. In part 2 we gonna deep dive into some advanced features like pagination [this](https://swapi-example.vercel.app/) will be the final outcome.
 
 [https://swapi-example.vercel.app/](https://swapi-example.vercel.app/)
 
@@ -33,7 +35,7 @@ In this article, I want to show how to use [SWR](https://swr.vercel.app/) to fet
 
 SWR (stale-while-revalidate) is a library that helps you to manage your fetched data with a specific [pattern](https://tools.ietf.org/html/rfc5861) specification. It first tries to return data from the cache (stale-phase) afterward sends a request to revalidate (revalidate-phase) the data and if there is new data available it comes up with the new data. It provides you with a nice example of how to easily fetch data from different APIs like REST or GraphQL APIs. The graph shows how HTTP requests are handled by SWR.
 
-![stale-while-revalidate-architecture](./swr.svg)
+<SWRDiagram />
 
 While it also gives you several awesome features out of the box
 
@@ -403,8 +405,5 @@ const App = () => {
 export default Home;
 ```
 
-The final result can be seen in this codesandbox
-
-[https://codesandbox.io/s/swapi-tutorial-part-1-vht53](https://codesandbox.io/s/swapi-tutorial-part-1-vht53)
-
+The final result can be seen in this [codesandbox](https://codesandbox.io/s/swapi-tutorial-part-1-vht53).
 In the next part, we are going to use SWR to fetch data as we scroll horizontally through the application.
