feat: add micro animation

--- a/content/blog/02-12-2020-datastructures-stack/index.mdx
+++ b/content/blog/02-12-2020-datastructures-stack/index.mdx
@@ -14,7 +14,7 @@ TLDR;
 - A stack in terms of computer science is a data structure to store a collection of elements
 - There are two core functionalities for stacks
   - You can ➕ add an element on top 🔝
-  - And also ➖ remove an element pop from top (the most recently added element)
+  - And also ➖ remove an element pop from the top (the most recently added element)
 
 ## What is a Stack
 
