fix: seleciton text and update typo blogpost

--- a/content/blog/05-03-2022-vs-code-tips/index.mdx
+++ b/content/blog/05-03-2022-vs-code-tips/index.mdx
@@ -32,7 +32,7 @@ Settings dialog in VS Code
 
 Here are the five 🔥 things I add to improve my development environment.
 
-## Enable bracket colorization
+## 1. Enable bracket colorization
 
 Using bracket colorization makes it easier to see where code blocks start and end.
 
@@ -45,7 +45,7 @@ Using bracket colorization makes it easier to see where code blocks start and en
  "editor.bracketPairColorization.enabled": true
 ```
 
-## Enable bracket pair guides
+## 2. Enable bracket pair guides
 
 Besides using bracket colorization, I love to add bracket pair guides.
 
@@ -55,10 +55,10 @@ Besides using bracket colorization, I love to add bracket pair guides.
 // settings.json
 
 // 2. enables vscode native bracket colorization
- "editor.bracketPairColorization.enabled": true
+ "editor.guides.bracketPairs": true,
 ```
 
-## Highlight modified Tab
+## 3. Highlight modified Tab
 
 I like to make it more clear which file I work on.
 
@@ -71,7 +71,7 @@ I like to make it more clear which file I work on.
 "workbench.editor.highlightModifiedTabs": true,
 ```
 
-## Using Font Ligatures
+## 4. Using Font Ligatures
 
 It makes it easier to distinguish comparisons between code lines.
 
@@ -86,7 +86,7 @@ It makes it easier to distinguish comparisons between code lines.
 "editor.fontLigatures": true,
 ```
 
-## Enabling Inlay hints
+## 5. Enabling Inlay hints
 
 <Video videoSrcURL={'/inlay-hints.mp4'} />
 
